--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,14 @@
         "yii-tools/fontawesome-asset": "^1.0@dev",
         "yii-tools/html": "^1.0@dev",
         "yii-tools/service": "^1.0@dev",
+        "yii-tools/user": "^1.0@dev",
         "yiisoft/aliases": "^2.0|^3.0",
         "yiisoft/arrays": "^3.0",
         "yiisoft/assets": "^4.0",
         "yiisoft/cache": "^3.0",
         "yiisoft/cache-file": "^3.0",
         "yiisoft/config": "^1.3",
+        "yiisoft/cookies": "^1.2",
         "yiisoft/csrf": "^2.0",
         "yiisoft/data-response": "^2.0",
         "yiisoft/definitions": "^3.2",
@@ -43,6 +45,7 @@
         "yiisoft/log-target-file": "^3.0",
         "yiisoft/router": "^3.0",
         "yiisoft/router-fastroute": "^3.0",
+        "yiisoft/session": "^2.0",
         "yiisoft/translator": "^3.0",
         "yiisoft/translator-message-php": "^1.1",
         "yiisoft/view": "^8.0",
@@ -63,9 +66,10 @@
         "codeception/module-phpbrowser": "^3.0",
         "maglnet/composer-require-checker": "^4.2",
         "phpunit/phpunit": "^9.5",
-        "rector/rector": "^0.15.2",
         "roave/infection-static-analysis-plugin": "^1.25",
-        "vimeo/psalm": "^5.8"
+        "vimeo/psalm": "^5.8",
+        "yiisoft/db-sqlite": "^3.0@dev",
+        "yiisoft/translator-extractor": "^2.0"
     },
     "autoload": {
         "psr-4": {
